--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,13 @@
 			<groupId>com.vaadin</groupId>
 			<artifactId>vaadin-themes</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>redis.clients</groupId>
+		    <artifactId>jedis</artifactId>
+		    <version>2.9.0</version>
+		    <type>jar</type>
+		    <scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
